--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ body {
 
 h1 {
   margin: 2rem;
+}
+
+.main-title {
   text-align: center;
 }
 
@@ -44,7 +47,29 @@ h1 {
 .X {
   color: red;
 }
-
 .O {
   color: green;
+}
+
+.info-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+h3 {
+  padding: 1rem;
+}
+
+li {
+  list-style: none;
+}
+
+.info-wrapper button {
+  background: #272727;
+  color: white;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0.5rem;
+  margin: 0.5rem 1rem;
 }
